# agentseal

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROBES.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
agentseal/: __init__.py  cli.py  discovery.py  schemas.py  scoring.py
agentseal/connectors/: ollama.py
agentseal/probes/: base.py  extraction.py  injection.py  loader.py
js/: README.md  package.json
js/src/probes/: extraction.ts  injection.ts
js/test/: edge-cases.test.ts  integration.test.ts  parity.test.ts  shield.test.ts  validator.test.ts
python/: README.md  pyproject.toml
python/agentseal/: __init__.py  baselines.py  blocklist.py  canaries.py  cli.py  config.py  constants.py  deobfuscate.py  guard.py  guard_models.py  machine_discovery.py  mcp_checker.py  mcp_runtime.py  profiles.py  scan_mcp.py  schemas.py  skill_scanner.py  toxic_flows.py  validator.py
python/agentseal/connectors/: __init__.py  anthropic.py  http.py  litellm.py  openai.py
python/agentseal/detection/: __init__.py  canary.py  skill_detector.py
python/tests/: test_baselines.py  test_blocklist.py  test_chains.py  test_dataflow.py  test_deobfuscate.py  test_edge_cases.py  test_fix.py  test_fs_safety.py  test_guard.py  test_guard_html.py  test_guard_models.py  test_guard_sarif.py  test_imports.py  test_llm_judge.py  test_machine_discovery.py  test_mcp_checker.py  test_mcp_checker_extended.py  test_mcp_registry.py  test_mcp_runtime.py  test_mcp_tool_analyzer.py  test_mcp_trust_score.py  test_probe_loader.py  test_profiles.py  test_scan_mcp.py  test_scan_mcp_integration.py  test_skill_scanner.py  test_toxic_flows_runtime.py  test_unicode_detection.py
(+2 files in other folders)
